--- a/fractal_1.html
+++ b/fractal_1.html
@@ -1,4 +1,7 @@
-<canvas width="1200" height="800" id="canvas"></canvas>
+<div>
+    <a href="index.html">На главную</a>
+</div>
+<canvas width="800" height="600" id="canvas"></canvas>
 <input type="range" min="0" max="400" id="coef" value="100">
 
 <script>
