--- a/fractal_4.html
+++ b/fractal_4.html
@@ -1,3 +1,6 @@
+<div>
+    <a href="index.html">На главную</a>
+</div>
 <body style="margin:0;user-select:none">
 <canvas width="200" height="200" id="canvas"></canvas>
 <br><span>click to change: asterisk</span></body>
