--- a/fractal_5.html
+++ b/fractal_5.html
@@ -1,3 +1,6 @@
+<div>
+    <a href="index.html">На главную</a>
+</div>
 <input type="range" id="iter" min=16 max=512 value=32 onchange="render()"/>
 <input type="range" id="r" min=1 max=33 value=11 onchange="render()"/>
 <input type="range" id="g" min=1 max=33 value=7 onchange="render()"/>
