--- a/fractal_6.html
+++ b/fractal_6.html
@@ -1,6 +1,9 @@
+<div>
+    <a href="index.html">На главную</a>
+</div>
 <div id="c">
     <div>
-        <canvas width="800" height="800" id="canvas"></canvas>
+        <canvas width="600" height="600" id="canvas"></canvas>
     </div>
     <div id="settings">
         <label>xmin <input type="number" id="xmin" min="0" max="4" step="0.1" value="2.5"/></label>
