add details for actions

--- a/fractal_2.html
+++ b/fractal_2.html
@@ -1,6 +1,7 @@
 <div>
     <a href="index.html">На главную</a>
 </div>
+<p>Двигайте мышкой над изображением</p>
 <canvas width="400" height="400" id="canvas"/>
 <script>
     let c = canvas.getContext('2d'), w = canvas.width, h = canvas.height
