--- a/fractal_4.html
+++ b/fractal_4.html
@@ -1,9 +1,8 @@
 <div>
     <a href="index.html">На главную</a>
 </div>
-<body style="margin:0;user-select:none">
+<p>Кликайте мышкой по изображению</p>
 <canvas width="200" height="200" id="canvas"></canvas>
-<br><span>click to change: asterisk</span></body>
 <script>
     let c = canvas.getContext('2d'), w = canvas.width, h = canvas.height
 
